# depscripter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/input/: data_plot.py  fastapi_app.py  todo_gui.py
examples/output/: data_plot.py  fastapi_app.py  todo_gui.py
src/depscripter/: __init__.py  __main__.py  cli.py  injector.py  resolver.py  scanner.py
tests/: test_cli.py  test_injector.py  test_integration.py  test_resolver.py  test_scanner.py
