[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depscripter"
version = "0.1.0"
description = "A zero-dependency tool to add PEP 723 metadata to Python scripts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
depscripter = "depscripter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/depscripter"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
