[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "depscripter"
version = "0.2.0"
description = "A zero-dependency tool to add PEP 723 metadata to Python scripts."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Sean Howard", email = "sean@example.com" },
]
keywords = ["pep-723", "script", "dependencies", "metadata", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/seanhoward/depscripter"
Issues = "https://github.com/seanhoward/depscripter/issues"

[project.scripts]
depscripter = "depscripter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/depscripter"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "pandas",
    "matplotlib",
    "numpy",
    "fastapi",
    "uvicorn",
]
